--- a/build.gradle
+++ b/build.gradle
@@ -16,16 +16,17 @@ repositories {
 	mavenCentral()
 }
 
-bootRun{
-	sourceResources sourceSets.main
-}
+//bootRun{
+//	sourceResources sourceSets.main
+//}
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.3.5'  // Verifica la versión
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
 	runtimeOnly 'com.mysql:mysql-connector-j'
